[tool.poetry]
name = "wandb project"
version = "0.1.0"
description = ""
authors = ["Martin Bernstorff <martinbernstorff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.1.3"
pandas = "^1.5.1"
pylint = "^2.15.5"
black = "^22.10.0"
mypy = "^0.990"
xgboost = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
